--- a/project.json
+++ b/project.json
@@ -41,6 +41,13 @@
     },
     "fileInfoCollection": [
       {
+        "editingStatus": "InProgress",
+        "testCaseId": "08791042-c77c-400f-b2bd-c5e0cf976fad",
+        "dataVariationFilePath": ".variations\\Input Data_Scheme Master_A9_1_Scheme_Master_1.json",
+        "testCaseType": "TestCase",
+        "fileName": "TestCase_2_Geography_Masters.xaml"
+      },
+      {
         "editingStatus": "Publishable",
         "testCaseId": "843a059a-3902-4e0a-9795-221bea3201eb",
         "dataVariationFilePath": ".variations\\Input Data_Login Page_GMS_Login.json",
@@ -63,24 +70,10 @@
       },
       {
         "editingStatus": "Publishable",
-        "testCaseId": "b5dc426c-915b-4efe-b04d-cd7e3fc7d080",
-        "dataVariationFilePath": ".variations\\Input Data_Geography Masters_A2_Geography_Master.json",
+        "testCaseId": "116b68b6-d7ad-40af-a522-bf8bb2043216",
+        "dataVariationFilePath": ".variations\\Input Data_Department Master_A4_User Master.json",
         "testCaseType": "TestCase",
-        "fileName": "TestCase2_Geography Master.xaml"
-      },
-      {
-        "editingStatus": "Publishable",
-        "testCaseId": "61b63c30-91d5-4735-aa72-a8c2a06d3e30",
-        "dataVariationFilePath": ".variations\\Input Data_Scheme Configurator_A10_1_Scheme_Details_1.json",
-        "testCaseType": "TestCase",
-        "fileName": "TestCase3_Gender_Master.xaml"
-      },
-      {
-        "editingStatus": "Publishable",
-        "testCaseId": "151b2cb1-0eee-4904-93b7-2f623cd36138",
-        "dataVariationFilePath": ".variations\\Input Data_Company Masters_A2_Geography_Master.json",
-        "testCaseType": "TestCase",
-        "fileName": "TestCase5_Company_Master.xaml"
+        "fileName": "TestCase_4_User_Master.xaml"
       }
     ],
     "modernBehavior": false
